# refactoring-2nd

./: .gitignore  LICENSE  Makefile  README.md  TEMPLATES.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: pr-test.yml
chapter01/: README.md  bills.py  create_statement_data.py  statements.py
chapter01/tests/: test_bills.py
chapter02/: README.md
chapter03/: README.md
chapter04/: README.md
chapter04/src/: producer.py  province.py
chapter04/tests/: test_province.py
chapter05/: README.md
chapter06/: README.md
chapter06/src/: my_clock.py
chapter06/src/case01/: README.md  case01.py
chapter06/src/case02/: README.md  case02.py  case02_1.py  case02_2.py
chapter06/src/case03/: README.md  case03.py
chapter06/src/case04/: README.md
chapter06/src/case05/: README.md  case05_1.py  case_05_2.py
chapter06/src/case06/: README.md  case06.py
chapter06/src/case07/: README.md
chapter06/src/case08/: README.md  case08.py
chapter06/src/case09/: README.md  case09.py
chapter06/src/case10/: README.md  case10.py  case10_1.py  case10_2.py  case10_3.py
chapter06/src/case11/: README.md  case11.py
chapter06/tests/case01/: test_case01.py
chapter06/tests/case02/: test_case02.py  test_case02_1.py  test_case02_2.py
chapter06/tests/case03/: test_case03.py
chapter06/tests/case05/: test_case05_1.py  test_case05_2.py
chapter07/: README.md
chapter08/: README.md
chapter09/: README.md
chapter10/: README.md
chapter11/: README.md
chapter12/: README.md
(+194 files in other folders)
