[tool.poetry]
name = "refactoring-2nd"
version = "0.1.0"
description = ""
authors = ["s3ich4n <s3ich4n@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.linter.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
